--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>Vartopia</title>
         <link rel="stylesheet" href="{{site.baseurl}}/css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/colorbox.css">
-	<link rel="stylesheet" href="css/movingboxes.css">
+        <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
+        <link rel="stylesheet" href="{{site.baseurl}}/css/colorbox.css">
+	<link rel="stylesheet" href="{{site.baseurl}}/css/movingboxes.css">
 </head>
 <body>
 <header class="site-header cf">
