--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
         <ul class="{{include.navclass}} inline-block-list">
             <li class="menu-item"><a href="#" class="{% if page.url == '/vars.html'%}hlite{% endif %}">Resellers</a>
 			</li>
-            <li class="menu-item"><a href="#" class="{% if page.url == '/vendors.html'%}hlite{% endif %}">Vendors</a>
+            <li class="menu-item"><a href="{{site.baseurl}}/vendors" class="{% if page.url contains '/vendors' %}hlite{% endif %}">Vendors</a>
 			</li>
             <li class="menu-item"><a href="{{site.baseurl}}/news"  class="{% if page.url == '/news/'%}hlite{% endif %}">News</a>
 			</li>
