VARS page added

--- a/_layouts/moving-boxes.html
+++ b/_layouts/moving-boxes.html
@@ -71,6 +71,7 @@
         <script src="{{site.baseurl}}/js/main.js"></script>
 
 {% if page.url contains '/vendors' %} {% include vendors-hidden-and-js.html %} {% endif %}
+{% if page.url contains '/vars' %} {% include vars-hidden-and-js.html %} {% endif %}
 
         <script src="{{site.baseurl}}/js/cycle.js"></script>
 	<script type='text/javascript'>
