Further blog dev. Cleaned up the content. Broke up the css.

--- a/css/main.css
+++ b/css/main.css
@@ -1,598 +1,11 @@
-/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html,
-button,
-input,
-select,
-textarea {
-    color: #222;
-}
-
-html {
-    font-size: 1em;
-    line-height: 1.4;
-    font-size: 16px;
-    text-align: center;
-}
-/* For sticky footer */
-html, body, form {height:100%;}
-#wrap {
-	min-height:100%;
-	overflow:auto;
-	 /*padding-bottom: 150px;must be same height as the footer */
-}  
-
-#footer {position: relative;
-	margin-top: -150px; /* negative value of footer height */
-	height: 150px;
-	clear:both;} 
-
-/*Opera Fix*/
-body:before {
-	content:"";
-	height:100%;
-	float:left;
-	width:0;
-	margin-top:-32767px;/
-}
-An
-p {color:#444;}
-a {text-decoration:none; color:#5D97C1;}
-a:hover, a:active {color:#222222;}
-/*
- * Remove text-shadow in selection highlight: h5bp.com/i
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-/*
- * Remove the gap between images, videos, audio and canvas and the bottom of
- * their containers: h5bp.com/i/440
- */
-
-audio,
-canvas,
-img,
-video {
-    vertical-align: middle;
-}
-
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
-}
-
-/* ==========================================================================
-   Browse Happy prompt
-   ========================================================================== */
-
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-.row {width:100%;}
-.container{max-width:980px;padding:0 10px;margin:0 auto; position:relative;}
-.site-header{min-height:45px;padding-top:3px; background:#222;}
-.site-logo{float:left; text-decoration:none;}
-.site-nav{float:right;
-		  padding:0;
-		  margin:1px 0 0;
-		  list-style:none}
-.site-nav a{display:block;
-			padding:10px;
-			background:#333;
-			color:#FFF;
-			text-decoration:none;
-			text-transform:uppercase}
-.site-nav a:hover,.site-nav a:focus,.site-nav .hlite {color:#FFF;	background:#86C552;}
-.inline-block-list{padding:0;margin:0;list-style:none}.inline-block-list li{display:inline-block;padding:0;margin:0 0 0 0.5em;vertical-align:top}.inline-block-list li:first-child{margin-left:0}
-.arrow-down, .next-text {display:inline-block; height:29px; overflow:hidden;}
-.go-up {display:inline-block; padding:10px 10px 0 10px; position:absolute; right:0; bottom:0;}
-.next-section {display:inline-block; padding:5px; vertical-align:middle;}
-/* Grid */
-.grid .columns { display: inline-block;
-			     text-rendering: auto;
- 			     vertical-align: top;}
-.grid .five {width:18%;}
-.grid .four {width:24%;}
-.grid .three {width:32%}
-.grid .threesm {width:28%;}
-.grid .two {width:49%}
-.grid .twosm {width:45%;}
-
-.grid .push-5 {margin-left:5%}
-.grid .push-7 {margin-left:8%}
-.grid .push-10 {margin-left:10%}
-
-.rounded {  -moz-border-radius: 10px;
-			-webkit-border-radius: 10px;
-			border-radius: 10px; /* future proofing */
-			-khtml-border-radius: 10px; /* for old Konqueror browsers */ }
-.divider {border-top:thin solid #ccc;}
-.v-divider {border-left:thin solid #ccc;}
-.padded {padding:10px;}
-/* Text styling */
-.xl {font-size:3em; line-height:1em;}
-.xl img {width:100px; height:auto;}
-.left {text-align:left;}
-.center {text-align:center;}
-.banner {padding:1em 9em; 
-		 background:url(../img/banner.png) no-repeat center top;
-		 }
-.banner h2 {margin-top:1.5em;}
-.number {font-size:60px;
-         color:#5D97C1;
-		 margin:0;
-		 padding:0;
-		 line-height:60px;}
-
-/* Colors */
-.darkbg {background:#222;}
-.gray1 {background:#F5F5F5;}
-.gray2 {background:#FAFAFA;}
-.greenbg {background:#86C552;}
-.white {color:#FFF;}
-.whitebg {background:#FFF;}
-.sky {color:#5C7AAA;}
-.skybg {background:#5C7AAA; border:2px solid #5C7AAA;}
-.dayskybg {background:#ACDCF7;}
-.money {color:#427839;}
-.moneybg {background:#427839; border:2px solid #427839;}
-.orange {color:#FF6633;}
-.orangebg {background:#FF6633; border:2px solid #FF6633;}
-.ltorangebg {background:#F59B30;}
-.bluebg {background:#5D97C1;}
-
-.boxed {border:2px solid #CCC; margin:.5%; text-align:center;}
-
-.blue-box {background:#F59B30; min-height:79px; margin:2em 4em;}
-.hlite {background:#222;}
-.blue-box img {display:block; float:left;}
-.blue-box span{display:block; margin-left:82px; padding:15px; line-height:1em;}
-.blue-box h4, .no-margin {margin:0;}
-.blue-box a {color:#222;}
-.hlite a {color:#649EC1;}
-/* one time used styles */
-.vendors-sfdc {background:url(../img/plugin-lt.png) no-repeat center center; background-size:15%;}
-.vendors-solution {background:url(../img/solution-lt.png) no-repeat center center; background-size:15%;}
-/* ====================== Buttons ============================= */
-.request-info {padding:1em; vertical-align:middle;}
-.request-info span {display:inline-block; height:100px; padding:0; margin-left:25px; float:left;}
-.flip-box { width:100px; padding:0; margin-right:35px; float:left;}
-
-.ie7 .contact-us .flip-box {
-	width: 100px;
-}
-
-.image1 {
-	position: absolute;
-	cursor: pointer;
-	width: 100px;
-	height: 100px;
-}
-
-.image2 {
-	position: absolute;
-	cursor: pointer;
-}
-/* green button, long green button */
-.green-button {	padding:8px 24px; margin-top:24px; }
-.long-green-button { padding:1em 4em; margin:15px auto; }
-.green-button, .long-green-button {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #828082), color-stop(1, #0f0d0f) );
-	background:-moz-linear-gradient( center top, #828082 5%, #0f0d0f 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#828082', endColorstr='#0f0d0f');
-	background-color:#828082;
-	-webkit-border-top-left-radius:6px;
-	-moz-border-radius-topleft:6px;
-	border-top-left-radius:6px;
-	-webkit-border-top-right-radius:6px;
-	-moz-border-radius-topright:6px;
-	border-top-right-radius:6px;
-	-webkit-border-bottom-right-radius:6px;
-	-moz-border-radius-bottomright:6px;
-	border-bottom-right-radius:6px;
-	-webkit-border-bottom-left-radius:6px;
-	-moz-border-radius-bottomleft:6px;
-	border-bottom-left-radius:6px;
-	text-indent:0;
-	border:1px solid #8c8c8c;
-	display:inline-block;
-	color:#ffffff;
-	line-height:0.8em;
-	font-weight:bold;
-	font-style:normal;
-	text-align:center;
-}
-.green-button:hover, .long-green-button:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #0f0d0f), color-stop(1, #828082) );
-	background:-moz-linear-gradient( center top, #0f0d0f 5%, #828082 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0f0d0f', endColorstr='#828082');
-	background-color:#0f0d0f;
-	color:#FFFFFF;
-}.green-button:hlite, .long-green-button:hlite {
-	position:relative;
-	top:1px;
-}
-.green-button h3 {margin:0; padding:0;}
-/* Foot slider stuff */
-#bottom-container{ width: 100%; max-width:910px; height:90px; margin:0 auto; position:relative; overflow:hidden; background-color:#FFF; }
-.logos { width: 100%; max-width:850px; height:auto; text-align:center; overflow:hidden;}
-#logos-go div img { margin: auto; display: block }
-#arr-prev{
-	display:block;
-	width:40px;
-	height:80px;
-	background:url(../img/b_prev.png) no-repeat;
-	position:absolute;
-	top:22px;
-	left:1px;
-}
-#arr-next {
-	display:block;
-	width:40px;
-	height:80px;
-	background:url(../img/b_next.png) no-repeat;
-	position:absolute;
-	top:22px;
-	right:1px;
-}
-
-/* Footer */
-#afterfooter {
-    background: none repeat scroll 0 0 #222222;
-    color: #FFFFFF;
-    width: 100%;
-	min-height:90px;
-}
-.follow{ float:left; width:120px; text-transform:uppercase; list-style:none; }
-	.follow li{ float:left; margin-left:8px; }
-	.follow li:first-child{ padding-top:2px; }
-	.follow a{ display:block; width:17px; height:16px; text-indent:-9999px; }
-	.follow a.tw{ background:url(../img/ico-tw.png); }
-	.follow a.in{ background:url(../img/ico-in.png); }
-
-
-
-/* CONTACT */
-.contact-container {
-	width: 90%;
-	margin: auto;
-	padding: 0;
-}
-.contact-container ::-webkit-input-placeholder {
-    color: rgb(100,100,100);
-}
-.contact-container :-moz-placeholder {
-    color: rgb(100,100,100);
-}
-.contact-container ::-moz-placeholder {
-    color: rgb(100,100,100);
-}
-.contact-container :-ms-input-placeholder {
-    color: rgb(100,100,100);
-}
-.contact-container form {
-	width: 100%;
-	margin: 0;
-}
-.contact-container form input[type=text],.contact-container form input[type=email], .contact-container form select {
-	width: 40%;
-	color: rgb(50,50,50);
-	/*border: thin solid #CCC;*/
-	outline:none;
-	background: rgb(225,225,225);
-	display:inline-block;
-}
-.contact-container form select {color: rgb(150,150,150);}
-.contact-container form option {color: rgb(50,50,50);}
-.contact-container form input[type=text] .error,.contact-container form input[type=email] .error, .contact-container form .error {border:2px solid #C00; !important}
-
-.contact-container form textarea {
-	width: 60%;
-	color: rgb(50,50,50);
-	background: rgb(225,225,225);
-	resize: none;
-	height: 10em;
-}
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-	.contact-container form textarea, .contact-container form input, .contact-container form select {
-		border: 0 inset;
-		border-image-source: initial;
-		border-image-slice: initial;
-		border-image-width: initial;
-		border-image-outset: initial;
-		border-image-repeat: initial;	
-	}
-	.contact-container form textarea:focus {
-		outline:0;
-	}
-}
-.contact-container form textarea::-webkit-scrollbar {
-	width: 10px;
-}
-.contact-container form textarea::-webkit-scrollbar-track {
-	background: transparent;
-	margin:0.5em;
-}
-.contact-container form textarea::-webkit-scrollbar-thumb {
-	background: rgb(100,100,100);
-}
-.contact-container form input[type=text],.contact-container form input[type=email], .contact-container form textarea, .contact-container form select {
-	font-size: 1em;
-	padding: 0.5em;
-	margin:0.1em 0;
-	font-weight: 300;
-}
-.contact-container form input[type=text]:focus,.contact-container form input[type=email]:focus, .contact-container form textarea:focus, .contact-container form select:focus {
-	background: rgb(180,180,180);
-}
-.contact-container form input[type=submit] {
-padding:0.5em 1.5em;
-margin: 0.1em 0;
-border: 0;
-background: rgb(50,50,50);
-color: white;
-font-weight: 900;
-cursor: pointer;
-}
-.contact-container form input[type=submit]:hover {
-background: rgb(100,100,100);
-}
-
-/* /CONTACT */
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Image replacement
- */
-
-.ir {
-    background-color: transparent;
-    border: 0;
-    overflow: hidden;
-    /* IE 6/7 fallback */
-    *text-indent: -9999px;
-}
-
-.ir:before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 150%;
-}
-
-/*
- * Hide from both screenreaders and browsers: h5bp.com/u
- */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
-}
-
-/*
- * Hide only visually, but have it available for screenreaders: h5bp.com/v
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-/*
- * Extends the .visuallyhidden class to allow the element to be focusable
- * when navigated to via the keyboard: h5bp.com/p
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-/*
- * Hide visually and from screenreaders, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/*
- * For IE 6/7 only
- * Include this rule to trigger hasLayout and contain floats.
- */
-
-.clearfix {
-    *zoom: 1;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-@media only screen and (min-width:500px) {
-	header {
-		position: fixed;
-		top:0;
-		width: 100%;
-		z-index: 999;
-	}
-	.first {margin-top:5em;}
-}
-@media only screen and (max-width: 720px){
-	.site-logo,.site-nav{ float:none}
-	.site-nav li{margin:0 .5em}
-	}
-@media only screen and (max-width: 500px){
-	html{ font-size:14px}
-	}
-@media only screen and (max-width: 460px){
-	.grid .five, .grid .four, .grid .three, .grid .threesm, .grid .two, .grid .twosm { width:100%; text-align:center;}
-	.grid .push-5, .grid .push-7, .grid .push-10 {margin:0;}
-	ul {text-align:left;}
-	.site-nav li{margin:0}
-	.mb-scrollButtons, #bottom-container{display:none;}
-	
-	}
-@media only screen and (max-width: 420px){
-	html{ font-size:13px}h1{font-size:2.5em}
-	.site-nav li{margin:0em}
-
-	}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid required HTTP connection: h5bp.com/r
-   ========================================================================== */
-
-@media print {
-    * {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster: h5bp.com/s */
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    /*
-     * Don't show links for images, or javascript/internal links
-     */
-
-    .ir a:after,
-    a[href^="javascript:"]:after,
-    a[href^="#"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group; /* h5bp.com/t */
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    @page {
-        margin: 0.5cm;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
+---
+
+---
+
+{% include css/boilerplate.css %}
+{% include css/grid.css %}
+{% include css/colors.css %}
+{% include css/trunk.css %}
+{% include css/form.css %}
+{% include css/media.css %}
 
