Further blog development

--- a/_includes/css/grid.css
+++ b/_includes/css/grid.css
@@ -13,6 +13,7 @@
 .grid .twosm {width:45%}
 .grid .oneandahalf {width:67%}
 
+.grid .push-2 {margin-left:2%}
 .grid .push-5 {margin-left:5%}
 .grid .push-7 {margin-left:8%}
 .grid .push-10 {margin-left:10%}
