--- a/_includes/css/trunk.css
+++ b/_includes/css/trunk.css
@@ -26,6 +26,7 @@
 .divider {border-top:thin solid #ccc;}
 .v-divider {border-left:thin solid #ccc;}
 .padded {padding:10px;}
+.margin-right {margin-right:7px;}
 /* Text styling */
 .xl {font-size:3em; line-height:1em;}
 .xl img {width:100px; height:auto;}
