more blog formatting

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -32,11 +32,11 @@
       <div id="arr-prev"> </div> <div id="arr-next"> </div>
       
       <div id="logos-go" class="logos">
-        <div><img src="{{site.baseurl}}img/grayscale-logos1.png"  /></div> 
-        <div><img src="{{site.baseurl}}img/grayscale-logos2.png"  /> </div>
-        <div><img src="{{site.baseurl}}img/grayscale-logos3.png"  /> </div>
-        <div><img src="{{site.baseurl}}img/grayscale-logos4.png"  /> </div>
-        <div><img src="{{site.baseurl}}img/grayscale-logos5.png"  /> </div>
+        <div><img src="{{site.baseurl}}/img/grayscale-logos1.png"  /></div> 
+        <div><img src="{{site.baseurl}}/img/grayscale-logos2.png"  /> </div>
+        <div><img src="{{site.baseurl}}/img/grayscale-logos3.png"  /> </div>
+        <div><img src="{{site.baseurl}}/img/grayscale-logos4.png"  /> </div>
+        <div><img src="{{site.baseurl}}/img/grayscale-logos5.png"  /> </div>
         </div><!-- /logos-go --> </div><!-- #bottom-container -->
 </div> <!-- end container -->
 </div> <!-- end row -->
