--- a/_includes/css/colors.css
+++ b/_includes/css/colors.css
@@ -16,3 +16,4 @@
 .bluebg {background:#5D97C1;}
 
 .bloghead {text-align:left; color:#FFF;}
+.latest {position:absolute; right:0; display:block; background:#222; color:#FFF; padding:0 20px;}
