--- a/css/main.css
+++ b/css/main.css
@@ -9,5 +9,6 @@
 {% include css/buttons.css %}
 {% include css/form.css %}
 {% include css/social.css %}
+{% include css/tables.css %}
 {% include css/media.css %}
 
