--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -55,11 +55,11 @@
 </div> <!-- end afterfooter -->
 </div> <!-- end row -->  	
 </footer> <!-- end footer -->        
-	<script src="js/vendor/jquery-1.10.2.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{site.baseurl}}js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/cycle.js"></script>
+	<script src="{{site.baseurl}}/js/vendor/jquery-1.10.2.min.js"></script>
+        <script>window.jQuery || document.write('<script src="{{site.baseurl}}/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <script src="{{site.baseurl}}/js/plugins.js"></script>
+        <script src="{{site.baseurl}}/js/main.js"></script>
+        <script src="{{site.baseurl}}/js/cycle.js"></script>
 	<script type='text/javascript'>
 		$(document).ready(function() {
 			$('#logos-go').cycle({
@@ -70,7 +70,7 @@
 			});
 		});
         </script>
-	<script src="js/pullup.js"></script>
+	<script src="{{site.baseurl}}/js/pullup.js"></script>
         <script>
 		$(document).ready(function(){
 	        $(".scroll").pullupScroll('.container');
