--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,11 +39,11 @@
       <div id="arr-prev"> </div> <div id="arr-next"> </div>
       
       <div id="logos-go" class="logos">
-        <div><img src="{{site.baseurl}}img/grayscale-logos1.png"  /></div> 
-        <div><img src="{{site.baseurl}}img/grayscale-logos2.png"  /> </div>
-        <div><img src="{{site.baseurl}}img/grayscale-logos3.png"  /> </div>
-        <div><img src="{{site.baseurl}}img/grayscale-logos4.png"  /> </div>
-        <div><img src="{{site.baseurl}}img/grayscale-logos5.png"  /> </div>
+        <div><img src="{{site.baseurl}}/img/grayscale-logos1.png"  /></div> 
+        <div><img src="{{site.baseurl}}/img/grayscale-logos2.png"  /> </div>
+        <div><img src="{{site.baseurl}}/img/grayscale-logos3.png"  /> </div>
+        <div><img src="{{site.baseurl}}/img/grayscale-logos4.png"  /> </div>
+        <div><img src="{{site.baseurl}}/img/grayscale-logos5.png"  /> </div>
         </div><!-- /logos-go --> </div><!-- #bottom-container -->
 </div> <!-- end container -->
 </div> <!-- end row -->
@@ -62,11 +62,11 @@
 </div> <!-- end afterfooter -->
 </div> <!-- end row -->  	
 </footer> <!-- end footer -->        
-	<script src="js/vendor/jquery-1.10.2.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/cycle.js"></script>
+	<script src="{{site.baseurl}}/js/vendor/jquery-1.10.2.min.js"></script>
+        <script>window.jQuery || document.write('<script src="{{site.baseurl}}/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <script src="{{site.baseurl}}/js/plugins.js"></script>
+        <script src="{{site.baseurl}}/js/main.js"></script>
+        <script src="{{site.baseurl}}/js/cycle.js"></script>
 	<script type='text/javascript'>
 		$(document).ready(function() {
 			$('#logos-go').cycle({
@@ -77,7 +77,7 @@
 			});
 		});
         </script>
-	<script src="js/pullup.js"></script>
+	<script src="{{site.baseurl}}/js/pullup.js"></script>
         <script>
 		$(document).ready(function(){
 	        $(".scroll").pullupScroll('.container');
