--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
 			</li>
             <li class="menu-item"><a href="{{site.baseurl}}/vendors" class="{% if page.url contains '/vendors' %}hlite{% endif %}">Vendors</a>
 			</li>
-            <li class="menu-item"><a href="{{site.baseurl}}/news"  class="{% if page.url == '/news/'%}hlite{% endif %}">News</a>
+            <li class="menu-item"><a href="{{site.baseurl}}/news"  class="{% if page.url contains '/news/'%}hlite{% endif %}">News</a>
 			</li>
             <li class="menu-item"><a href="#" class="{% if page.url == '/about.html'%}hlite{% endif %}">About Us</a>
 			</li>
