--- a/_layouts/r_base.html
+++ b/_layouts/r_base.html
@@ -49,5 +49,23 @@
 	        $(".scroll").pullupScroll('.container');
 		});
 	</script>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-19636017-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+        <!-- Genius tracking code -->
+<script language='JavaScript' type='text/javascript'>if (self==top){document.write("<scr" + "ipt type='text/javascript' language='JavaScript' id='GeniusCode' src='" + location.protocol + '//cehdi.rsvpgenius.com/mgTrack1.js?mgcid=5c2dmt6' + "'><\/scr" + "ipt>");}</script> 
+
 </body>
 </html>
