--- a/_includes/css/colors.css
+++ b/_includes/css/colors.css
@@ -10,7 +10,7 @@
 .dayskybg {background:#ACDCF7;}
 .money {color:#427839;}
 .moneybg {background:#427839; border:2px solid #427839;}
-.orange {color:#FF6633;}
+.orange, blockquote {color:#FF6633;}
 .orangebg {background:#FF6633; border:2px solid #FF6633;}
 .ltorangebg {background:#F59B30;}
 .bluebg {background:#5D97C1;}
