--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,9 @@
 			</li>
             <li class="menu-item"><a href="{{site.baseurl}}/news"  class="{% if page.url contains '/news/' %}hlite{% endif %}">News</a>
 			</li>
-            <li class="menu-item"><a href="{{site.baseurl}}/about" class="{% if page.url contains '/about' %}hlite{% endif %}">About Us</a>
+<!--            <li class="menu-item"><a href="{{site.baseurl}}/about" class="{% if page.url contains '/about' %}hlite{% endif %}">About Us</a>  -->
+
+            <li class="menu-item"><a href="http://vartopia.com/about.html" class="{% if page.url contains '/about' %}hlite{% endif %}">About Us</a>
 			</li>
             <li class="menu-item"><a href="http://vartopia.com/contact.html" class="{% if page.url == '/contact.html'%}hlite{% endif %}">Contact</a>
 			</li>
