Partners section is added

--- a/_includes/vars-hidden-and-js.html
+++ b/_includes/vars-hidden-and-js.html
@@ -61,7 +61,7 @@
 				$(".sfdc-screenshots").colorbox({rel:'sfdc-screenshots', transition:"none", width:"75%", height:"75%"});
 				$(".screen1").colorbox({rel:'screen1', width:"75%", height:"75%"});
 				$(".screen2").colorbox({rel:'screen2', width:"75%", height:"75%"});
-				$(".inline").colorbox({inline:true, width:"75%"});
+				$(".inline-content").colorbox({inline:true, width:"75%"});
 			});
 		</script>
        	<script src="{{site.baseurl}}/js/jquery.movingboxes.js"></script>
