--- a/_includes/vendors-hidden-and-js.html
+++ b/_includes/vendors-hidden-and-js.html
@@ -55,7 +55,7 @@
 				
 				$(".solution1").colorbox({rel:'solution1', width:"75%", height:"75%"});
 				$(".solution2").colorbox({rel:'solution2', width:"75%", height:"75%"});
-				$(".inline").colorbox({inline:true, width:"75%"});
+				$(".inline-content").colorbox({inline:true, width:"75%"});
 
 			});
 		</script>
