--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -63,7 +63,7 @@ Author: {{page.author}}
 <hr /><h4>Read more</h4> <br />
 <!-- List of other articles -->
 <div class="left">
-{% for news in site.categories.news %}
+{% for news in site.categories.blog %}
 {% if news.title contains page.title %}
 
 {% else %}
