--- a/_includes/css/colors.css
+++ b/_includes/css/colors.css
@@ -1,5 +1,6 @@
 /* Colors */
 .darkbg {background:#222;}
+
 .gray1 {background:#F5F5F5;}
 .gray2 {background:#FAFAFA;}
 .greenbg {background:#86C552;}
@@ -16,4 +17,5 @@
 .bluebg {background:#5D97C1;}
 
 .bloghead {text-align:left; color:#FFF;}
+.bloghead a:hover, .bloghead a:active {color:#FFF;}
 .latest {position:absolute; right:0; display:block; background:#222; color:#FFF; padding:0 20px;}
