--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,13 +1,13 @@
         <ul class="{{include.navclass}} inline-block-list">
-            <li class="menu-item"><a href="http://vartopia.com/vars.html" class="{% if page.url contains '/vars' %}hlite{% endif %}">Resellers</a>
+            <li class="menu-item"><a href="{{site.baseurl}}/vars" class="{% if page.url contains '/vars' %}hlite{% endif %}">Resellers</a>
 			</li>
-            <li class="menu-item"><a href="http://vartopia.com/vendors.html" class="{% if page.url contains '/vendors' %}hlite{% endif %}">Vendors</a>
+            <li class="menu-item"><a href="{{site.baseurl}}/vendors" class="{% if page.url contains '/vendors' %}hlite{% endif %}">Vendors</a>
 			</li>
-            <li class="menu-item"><a href="{{site.baseurl}}/news"  class="{% if page.url contains '/news/' %}hlite{% endif %}">News</a>
+            <li class="menu-item"><a href="{{site.baseurl}}/blog"  class="{% if page.url contains '/blog' %}hlite{% endif %}">Blog</a>
 			</li>
-<!--            <li class="menu-item"><a href="{{site.baseurl}}/about" class="{% if page.url contains '/about' %}hlite{% endif %}">About Us</a>  -->
-
-            <li class="menu-item"><a href="http://vartopia.com/about.html" class="{% if page.url contains '/about' %}hlite{% endif %}">About Us</a>
+            <li class="menu-item"><a href="{{site.baseurl}}/news"  class="{% if page.url contains '/news' %}hlite{% endif %}">News</a>
+			</li>
+            <li class="menu-item"><a href="{{site.baseurl}}/about" class="{% if page.url contains '/about' %}hlite{% endif %}">About Us</a>
 			</li>
             <li class="menu-item"><a href="http://vartopia.com/contact.html" class="{% if page.url == '/contact.html'%}hlite{% endif %}">Contact</a>
 			</li>
