--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Vartopia</title>
+  <title>{{ page.title }}</title>
         <link rel="stylesheet" href="{{site.baseurl}}/css/normalize.css">
         <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
         <link rel="stylesheet" href="{{site.baseurl}}/css/colorbox.css">
@@ -13,11 +13,8 @@
 <div class="darkbg row">
 <div class="container">
 
-        <div class="site-logo">
-          <a href="{{site.baseurl}}">
-          <img alt="logo" src="http://vendortopia.com/wordpress/wp-content/uploads/2013/05/logo2.png">
-          </a></div>
-{% include nav.html navclass='site-nav' %}
+       {% include logo.html %}
+       {% include nav.html navclass='site-nav' %}
     
 </div> <!-- end container -->
 </div> <!-- end row -->
@@ -28,5 +25,6 @@
 {{content}}
 </div> <!-- end container -->
 </div> <!-- end row -->
+{% include trackers.html %}
 </body>
 </html>
